# learn-designing-system

./: .gitignore
flash-sale-backend/: .env  README.md  main.py  pyproject.toml
flash-sale-backend/app/: app.py
flash-sale-backend/app/core/: config.py
flash-sale-backend/app/db/: base.py  session.py
flash-sale-backend/app/exception/: __init__.py  out_of_stock_exception.py  user_already_purchased_exception.py
flash-sale-backend/app/redis/: __init__.py
flash-sale-backend/app/schemas/: buy.py  restore_inventory_request.py
flash-sale-backend/app/services/: inventory.py  order_queue.py  payment.py
flash-sale-backend/app/tests/: conftest.py  test_concurrent_buy.py
flash-sale-backend/app/workers/: order_worker.py
movie-ticketing-backend/: .env  DATABASE_DIAGRAM.md  README.md  main.py  pyproject.toml
movie-ticketing-backend/app/: app.py
movie-ticketing-backend/app/core/: config.py  idempotency.py
movie-ticketing-backend/app/crud/: booking.py  movie.py  screen.py  show.py  theatre.py
movie-ticketing-backend/app/db/: base.py  session.py
movie-ticketing-backend/app/exceptions/: booking_not_found.py  seat_already_locked.py  show_seat_not_found.py
movie-ticketing-backend/app/models/: Movie.py  Seat.py  Show.py  Theatre.py  __init__.py  booking.py  booking_seat.py
movie-ticketing-backend/app/redis/: __init__.py
movie-ticketing-backend/app/schemas/: booking.py  booking_seat.py  movie.py  screen.py  seat.py  show.py  showseat.py  theatre.py
movie-ticketing-backend/app/scripts/: seed_data.py
movie-ticketing-backend/app/tests/: conftest.py  test_string.py  (+2 more)
online-polling/: .env  README.md  main.py  pyproject.toml
online-polling/app/: app.py
(+79 files in other folders)
