[project]
name = "movie-ticketing-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "pytest",
    "httpx",
    "sqlalchemy>=2.0.44",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.0",
    "redis>=7.1.0",
    "pytest-asyncio>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
